--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.71'
-    ext.buildgradle_version = '3.0.1'
+    ext.kotlin_version = '1.3.21'
+    ext.buildgradle_version = '3.3.1'
     repositories {
         google()
         jcenter()
@@ -41,6 +41,8 @@ buildscript {
         okhttpVersion = "3.9.0"
         loggingInterceptorVersion = "3.8.0"
         databindingVersion = "3.0.1"
+
+        glideVersion = "4.8.0"
     }
 
 }
