--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,16 +57,19 @@ dependencies {
     kapt "com.android.databinding:compiler:$rootProject.buildgradle_version"
 
     implementation "android.arch.persistence.room:runtime:$rootProject.archRoomVersion"
-    implementation "android.arch.persistence.room:rxjava2:$rootProject.archRoomVersion"
+//    implementation "android.arch.persistence.room:rxjava2:$rootProject.archRoomVersion"
     implementation 'com.android.support:support-v4:28.0.0'
     kapt "android.arch.persistence.room:compiler:$rootProject.archRoomVersion"
     implementation "android.arch.lifecycle:extensions:$rootProject.archLifecycleExtensionsVersion"
     implementation "android.arch.lifecycle:common-java8:$rootProject.archLifecycleVersion"
 
-    implementation "io.reactivex.rxjava2:rxandroid:$rootProject.rxJava2AndroidVersion"
+//    implementation "io.reactivex.rxjava2:rxandroid:$rootProject.rxJava2AndroidVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$rootProject.kotlinxCoroutinesVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.kotlinxCoroutinesVersion"
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$rootProject.retrofit2kotlinadapterVersion"
 
     implementation "com.squareup.retrofit2:retrofit:$rootProject.retrofitVersion"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:$rootProject.retrofitVersion"
+//    implementation "com.squareup.retrofit2:adapter-rxjava2:$rootProject.retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$rootProject.retrofitVersion"
     implementation "com.squareup.okhttp3:logging-interceptor:$rootProject.loggingInterceptorVersion"
     implementation "com.squareup.okhttp3:okhttp:$rootProject.okhttpVersion"
